Fix issue where feature images in Blog section & secondary homepage sections were left-aligned rather than center-aligned

--- a/dispatch/themes/ubyssey/static/css/sass/modules/_homepage.scss
+++ b/dispatch/themes/ubyssey/static/css/sass/modules/_homepage.scss
@@ -458,9 +458,11 @@ article.col {
     height: 72px;
     margin-right: 12px;
     margin-bottom: 5px;
-    img {
+    div.featured {
       width: auto;
       height: 100%;
+      background-position: center;
+      background-size: cover;
     }
   }
 }
